Masks not Animating in Render #59939

Closed
opened 2018-12-29 01:40:30 +01:00 by Jacob Swing · 10 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GTX 1070

Blender Version
Broken:
2.80, a7c5f4f2D657, blender2.8, 2018-12-28

Animated masks will appear animated when scrubbing through the timeline in the movie clip editor. When compositing the masks will still animate with the scene (regardless of being viewed through the compositing node or viewer node) however, when rendered the masks are not animated.masking_example.blend

The blender 2.8 file can be opened in blender 2.79 and rendered and all masks animate as they should.

Exact steps for others to reproduce the error
go to movie clip editor
choose image or clip
add any number of masks to the scene
go to compositor
add an image or movie node based on your original selection
add a mask node and a mix node
merge the two with an "add" operation for the mix node
render

Thanks for all the work you guys do! You are the heroes!!!!!

Regards,
Jacob

**System Information** Operating system: Windows 10 Graphics card: Nvidia GTX 1070 **Blender Version** Broken: 2.80, a7c5f4f2D657, blender2.8, 2018-12-28 Animated masks will appear animated when scrubbing through the timeline in the movie clip editor. When compositing the masks will still animate with the scene (regardless of being viewed through the compositing node or viewer node) however, when rendered the masks are not animated.[masking_example.blend](https://archive.blender.org/developer/F6101747/masking_example.blend) The blender 2.8 file can be opened in blender 2.79 and rendered and all masks animate as they should. **Exact steps for others to reproduce the error** go to movie clip editor choose image or clip add any number of masks to the scene go to compositor add an image or movie node based on your original selection add a mask node and a mix node merge the two with an "add" operation for the mix node render Thanks for all the work you guys do! You are the heroes!!!!! Regards, Jacob
Author

Added subscriber: @jswing

Added subscriber: @jswing

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-29 12:05:35 +01:00

I can reproduce this. When I move around the timeline, I can see the masks updating. And if I hit F12, the mask reflects what I see in the preview.

However, if I render out an animation, the mask is static and doesn't move.

I can reproduce this. When I move around the timeline, I can see the masks updating. And if I hit F12, the mask reflects what I see in the preview. However, if I render out an animation, the mask is static and doesn't move.

This issue was referenced by db78a8ee2e

This issue was referenced by db78a8ee2e8c365804c8a4a4adab9ebea6977307
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

I assume this is similar to #57939 (in that render pipeline is not covered by DEG)
BKE_animsys_evaluate_all_animation() is already done here as an extra evaluation step.
However mask deformations are not actions, so it seems extra evaluation 'by hand' is needed... see D4140 for a potential fix...

since this is render pipeline related, I am subscribing @brecht as well...

I assume this is similar to #57939 (in that render pipeline is not covered by DEG) `BKE_animsys_evaluate_all_animation()` is already done here as an extra evaluation step. However mask deformations are not actions, so it seems extra evaluation 'by hand' is needed... see [D4140](https://archive.blender.org/developer/D4140) for a potential fix... since this is render pipeline related, I am subscribing @brecht as well...

Added subscriber: @KjetilLunde

Added subscriber: @KjetilLunde
Sergey Sharybin removed their assignment 2019-01-22 16:14:01 +01:00
Philipp Oeser was assigned by Sergey Sharybin 2019-01-22 16:14:01 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@lichtwerk, read the comment in the patch. Think is better to solve the issue with such a workaround for now than to keep this being broken. Assigning to you so you can fully tackle it from now.

@lichtwerk, read the comment in the patch. Think is better to solve the issue with such a workaround for now than to keep this being broken. Assigning to you so you can fully tackle it from now.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59939
No description provided.